--- a/coinchallenge/mainwindow.ui
+++ b/coinchallenge/mainwindow.ui
@@ -20,12 +20,12 @@
      <x>0</x>
      <y>0</y>
      <width>708</width>
-     <height>25</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
-     <string>start</string>
+     <string>开始</string>
     </property>
     <addaction name="actionquit"/>
    </widget>
@@ -47,7 +47,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>quit</string>
+    <string>退出</string>
    </property>
   </action>
   <action name="actionedit">
